# squash

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
notebooks/: court_lines.ipynb  court_segmentation.ipynb  court_segments.ipynb
scripts/: court_clibration_analyze.py  example_analyze.py  split_video_to_frames_runner.py
src/squash/: __init__.py
src/squash/analysis/: tracker.py
src/squash/court_calibration/: court_calibrator.py  models.py
src/squash/utils/: io.py  split_video_to_frames.py
src/squash/video/: loader.py
src/squash/visualization/: court_visualizer.py
tests/: test_video_loader.py
