[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "squash"
version = "0.1.0"
description = "Squash game video analysis toolkit"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "inference>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
